--- a/app/src/main/res/layout/related.xml
+++ b/app/src/main/res/layout/related.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -10,7 +11,7 @@
     <ImageView
         android:layout_width="70dp"
         android:layout_height="70dp"
-        android:id="@+id/pic"
+        android:id="@+id/related_pic"
         android:src="@mipmap/ic_launcher"
         android:layout_marginLeft="5dp"
         android:layout_marginTop="7dp"
@@ -21,32 +22,32 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="title"
-        app:layout_constraintLeft_toRightOf="@+id/pic"
+        app:layout_constraintLeft_toRightOf="@+id/related_pic"
         android:layout_marginTop="15dp"
-        app:layout_constraintTop_toTopOf="@+id/pic"
+        app:layout_constraintTop_toTopOf="@+id/related_pic"
         android:textSize="18dp"
         android:layout_marginLeft="10dp"
 
         android:textColor="#313030"
-        android:id="@+id/title"/>
+        android:id="@+id/related_title"/>
 
     <TextView
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="title"
-        app:layout_constraintLeft_toRightOf="@+id/pic"
+        app:layout_constraintLeft_toRightOf="@+id/related_pic"
         android:layout_marginTop="3dp"
         android:layout_marginLeft="10dp"
-        app:layout_constraintTop_toBottomOf="@+id/title"
+        app:layout_constraintTop_toBottomOf="@+id/related_title"
         android:textSize="18dp"
         android:textColor="#7a7a7a"
         android:id="@+id/artist"/>
-
     <View
         android:layout_width="0dp"
         android:layout_height="1dp"
-        app:layout_constraintTop_toBottomOf="@+id/pic"
-        android:background="#b7b3b3"/>
-
+        app:layout_constraintTop_toBottomOf="@+id/related_pic"
+        android:background="#b7b3b3"
+        tools:ignore="MissingConstraints" />
+    
 
 </androidx.constraintlayout.widget.ConstraintLayout>
